--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -2,13 +2,14 @@
 p{
 	@include text-style($paraFont, 1em, 400, #333);
 	margin: 10px 0;
+	padding: 0 $dPad;
 }
 
 label{
 	@include text-style($paraFont, 1.1em, 500, #333);
 }
 input{
-	@include text-style($paraFont, 1.3em, 100, #333);
+	@include text-style($emphasisFont, 1.3em, 100, #333);
 }
 textarea{
 	@include text-style($emphasisFont, 1.1em, 100, #333)
@@ -19,10 +20,11 @@ h1{
 }
 h2{
 	@include text-style($headingFont, 1.8em, 1000, #333);
-	// padding: $dPad $dPad 0 $dPad;
+	padding: 0 $dPad;
 }
 h3{
 	@include text-style($headingFont, 1.4em, 600, #333);
+	padding: 0 $dPad;
 }
 h4{
 	@include text-style($headingFont, 1.2em, 500, #333);
