--- a/sass/_articleImages.scss
+++ b/sass/_articleImages.scss
@@ -2,5 +2,5 @@
 #imageThreat{
 	background-image: url("../assets/threats_dogOnShore.jpg");
 	background-position: center;
-	background-size: $spancol;
+	background-size: 200%;
 }
