--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -11,8 +11,14 @@ $paraFont: 'Lexend Deca', sans-serif;
 $headingFont: 'Nunito', sans-serif;
 $emphasisFont: 'PT Mono', monospace;
 
-// colours
-$sectionColor: lightgrey;
+// colors
+$linkColor: blue;
+$primaryColor: #0368a6;
+//--- colours sections
+$siteBack: #62c3d9;
+$sectionColor: #d8ebf2;
 $articleColor: white;
+
+
 
 $shadow: 4px 4px 10px #404040;
