--- a/sass/_mediaQuerries.scss
+++ b/sass/_mediaQuerries.scss
@@ -1,30 +1,28 @@
 // Tablet mode
 @media only screen and (min-width: 768px) {
-	.section__articles{
 
-		.article__container{
-			width: 5.5*$col;
-		}
-		h1{
-			font-size: 2.5em;
-		}
-		.member__block{
-			width: 6*$col;
-			margin: auto;
 
-			.btn__payment{
-				width: $spancol;
-				float: none;
-				// margin: 8px auto;
-			}
-			.member__submit--btn{
-				margin: 0 auto;
-			}
-			.member__image{
-				width: 6*$col;
-			}
-		}
-	}
+.article__container{
+	width: 5.5*$col;
+}
+h1{
+	font-size: 2.5em;
+}
+.member__block{
+	width: 6*$col;
+	margin: auto;
+}
+.btn__payment{
+	width: $spancol;
+	float: none;
+	// margin: 8px auto;
+}
+.member__submit--btn{
+	margin: 0 auto;
+}
+.member__image{
+	width: 6*$col;
+}
 	.btn__link{
 		max-width: 375px;
 	}
@@ -60,7 +58,7 @@
 	}
 
 	.section__articles{
-		max-width: 1250px;
+		max-width: 1050px;
 		margin-left: auto;
 
 		.article__container{
@@ -90,7 +88,17 @@
 	.section{
 		width: 9.5*$col;
 		margin-left: auto;
-		max-width: 1250px;
+		min-height: 100vh
+	}
+
+	.member__image{
+		width: 8*$col;
+	}
+	.member__field{
+		padding: 0 0;
+	}
+	.member__subscription{
+		margin: 10px 0;
 	}
 	
 	// Article-images
@@ -103,6 +111,7 @@
 	// Navigation
 	#desktop{
 		display: block;
+		margin-top: 10px;
 	}
 	#mobile{
 		display: none;
