--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -3,19 +3,19 @@
 }
 
 #desktop{
-	background-color: #333;
+	background-color: $navBackColor;
 	width: 2.5*$col;
-	max-width: 300px; 
+	max-width: 300px;
 	z-index: 50;
 	position: sticky;
 	float: left;
 	top: 25px;
-	left: 0;
 	font-family: $emphasisFont;
 	display: none;
+	box-shadow: $navShadow;
 
 	.highlighted{
-	background: orange;
+	background: $highLightColor;
 	padding: 10px;
 	margin-bottom: 15px;
 	text-align: center;
@@ -24,7 +24,7 @@
 	ul{
 		a{
 			text-decoration: none;
-			color: white;
+			color: $fontLight;
 			display: inline;
 
 			li{
@@ -33,7 +33,7 @@
 			}
 
 			li:hover{
-				background: yellow;
+				background: $navHoverColor;
 				color: black;
 			}
 		}	
