--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -26,4 +26,5 @@ $navBackColor: #135e56;
 $navHoverColor: #e38242;
 
 $shadow: 4px 4px 10px #404040;
-$navShadow: 5px 6px 13px #404040;
+$navShadow: 2px 2px 13px #404040;
+$sectionShadow: 2px 1px 10px #3d3d3d;
