--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,7 @@
 @import "_layout";
 @import "_articles";
 @import "_articleImages";
+@import "_homeImages";
 @import "_memberForm";
 @import "_test";
 
