--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -9,7 +9,8 @@ header{
 	background: $primaryColor;
 	width: $spancol;
 	padding: 30px;
-	display: fixed;
+	position: sticky;
+	top: 0
 }
 .section{	
 	padding: 0 0 25px 0;
@@ -21,6 +22,7 @@ header{
 	align-items: center;
 	align-content: stretch;
 	margin-right: auto;
+	box-shadow: $sectionShadow;
 
 	a{
 		color: $linkColor;
